# ZeroTrustAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  .replit  CLAUDE.md  CODE_IMPROVEMENT_PLAN.md  LICENSE.md  README.md  Requirements.txt  agent-log.md  pyproject.toml  replit.nix  requirements.txt  setup.py  together_config.py
.github/workflows/: .gitkeep  ci.yml
attached_assets/: Pasted-Set-up-the-SDK-This-guide-uses-the-google-genai-Python-SDK-to-connect-to-the-Gemini-2-0-models--1739120092439.txt
config/: authentication.providers.example.yaml  hunting_patterns.json  policy.yaml
docs/: authentication.md  configuration.md  openai_agents_integration.md  roadmap.md
examples/: autogen_example.py  basic_usage.py  bedrock_agent_example.py  claude_agent_example.py  crewai_example.py  google_agent_example.py  google_oauth_end_to_end.py  ibm_watsonx_example.py  langgraph_example.py  openai_agent_example.py  test_autogen.py  test_crewai.py
test_env/: pyvenv.cfg
tests/: test_integration.py  test_openai_agent_adapter.py  test_security_analysis.py
tests/core/: test_auth.py  test_policy.py
tests/integrations/: __init__.py  test_ag2_adapter.py  test_autogen_adapter.py  test_bedrock_agent_adapter.py  test_claude_agent_adapter.py  test_controlflow_adapter.py  test_crewai_adapter.py  test_google_agent_adapter.py  test_haystack_adapter.py  test_ibm_watsonx_adapter.py  test_langgraph_adapter.py  test_llama_index_adapter.py  test_openai_agent_adapter.py  test_pydantic_ai_adapter.py  test_semantic_kernel_adapter.py  test_superagent_adapter.py
zta_agent/: __init__.py  together_config.py
zta_agent/core/: __init__.py  auth.py  credential_store.py  exceptions.py  monitor.py  password_policy.py  policy.py  security_logger.py  security_monitor.py  token_store.py
zta_agent/core/auth_providers/: base.py  certificate.py  oauth.py
zta_agent/core/auth_providers/social/: entra.py  github.py  google.py
zta_agent/core/models/: __init__.py  base.py  credentials.py  token.py
zta_agent/core/security_analysis/: __init__.py  behavioral_analytics.py  llm_analyzer.py  threat_hunter.py
zta_agent/data/: zta.db
zta_agent/integrations/: __init__.py  ag2_adapter.py  autogen_adapter.py  bedrock_agent_adapter.py  claude_agent_adapter.py  controlflow_adapter.py  crewai_adapter.py  google_agent_adapter.py  haystack_adapter.py  ibm_watsonx_adapter.py  langgraph_adapter.py  llama_index_adapter.py  openai_agent_adapter.py  pydantic_ai_adapter.py  semantic_kernel_adapter.py  superagent_adapter.py
zta_agent/tools/: __init__.py  search_tool.py
zta_agent/utils/: __init__.py  config.py  logger.py
