[project]
name = "zta-agent"
version = "0.1.0"
description = "Zero Trust Security Agent for AI Frameworks"
authors = []
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.11.0",
    "duckduckgo-search>=4.1.1",
    "hatch>=1.14.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-ollama>=0.2.3",
    "langchain-openai>=0.0.2",
    "openai>=1.0.0",
    "pyautogen>=0.7.3",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zta_agent"]
